<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>

    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_note">Notes</string>
    <string name="menu_courses">Courses</string>

    <string name="note_title_hint">Note Title</string>
    <string name="note_text_hint">Note Text</string>

    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough...</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="send_as_email">Send as email</string>
    
    <!--- user-defined preference -->
    <string name="pref_default_display_name">Your Name</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="pref_default_email_address">YourName@yourhost.com</string>
    <string name="pref_title_favorite_social">Favorite social network</string>
    <string name="contact">Contact</string>

    <string-array name="pref_entries_favorite_social">
        <item>GitHub</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>

    <string-array name="pref_value_favorite_social">
        <item>http://github.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </string-array>

    <string name="pref_default_favorite_social"> http://github.com</string>


</resources>