<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:fragment="com.appleobject.mynotekeeper.SettingsActivity$PrefGeneral"
        android:icon="@drawable/ic_baseline_contacts_24"
        android:title="@string/contact"
        android:key="contact_header"
        />

    <Preference
        app:fragment="com.appleobject.mynotekeeper.SettingsActivity$MessagesFragment"
        app:icon="@drawable/messages"
        app:key="messages_header"
        app:title="@string/messages_header" />

    <Preference
        app:fragment="com.appleobject.mynotekeeper.SettingsActivity$SyncFragment"
        app:icon="@drawable/sync"
        app:key="sync_header"
        app:title="@string/sync_header" />




</PreferenceScreen>